# B9122-09.03.04-Mikhailov_Konstantin

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
auth-service/: .env.example  Dockerfile  (+2 more)
forecasting-service/: .dockerignore  debug.py  pyproject.toml
forecasting-service/src/forecasting_service/: config.py
forecasting-service/src/forecasting_service/api/: dependencies.py  main.py  schemas.py
forecasting-service/src/forecasting_service/api/v1/: predictions.py
forecasting-service/src/forecasting_service/core/: constants.py  exceptions.py  protocols.py
forecasting-service/src/forecasting_service/data/: collector.py  ml_dataset_v4.csv  normalize_dataset.py  storage.py  train_final.py
forecasting-service/src/forecasting_service/data/models/: feature_importance_rf_total_price.csv  feature_importance_xgb_total_price.csv  feature_names.json  scaler_total_price_final.pkl
forecasting-service/src/forecasting_service/domain/: entities.py
forecasting-service/src/forecasting_service/ml/: predictor.py
forecasting-service/src/forecasting_service/parsers/: __init__.py  base.py
forecasting-service/src/forecasting_service/parsers/avito/: __init__.py
forecasting-service/src/forecasting_service/parsers/cian/: __init__.py  constants.py  detail_parser.py  models.py  page_parser.py  parser.py
forecasting-service/src/forecasting_service/scripts/: collect_details.py  collect_listings.py  coverage_report.py  debug_domclick.py  debug_html.py
forecasting-service/src/forecasting_service/utils/: __init__.py  formatting.py  logging_setup.py
(+146 files in other folders)
