[project]
name = "forecasting-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mercury", email = "122353133+kostya1102m@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cianparser>=1.0.4",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "selenium-stealth>=1.0.6",
    "setuptools>=82.0.0",
    "shap>=0.52.0",
    "undetected-chromedriver>=3.5.5",
    "xgboost>=3.2.0",
]

[project.scripts]
forecasting-service = "forecasting_service:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
